# mcp-dashboard-studio

./: CLAUDE.md  LICENSE  README.md  jac.toml  main.jac  pyproject.toml  test.md
backend/: api.jac  service.jac  utils.jac
components/: Badge.cl.jac  Button.cl.jac  CodeBlock.cl.jac  Spinner.cl.jac
frontend/: Dashboard.cl.jac  Dashboard.impl.jac  home.cl.jac
scripts/: dev.sh
tests/: service_test.jac  walkers_test.jac
